--- a/AUTHORS
+++ b/AUTHORS
@@ -8,4 +8,5 @@
 
 # Please keep the list sorted.
 
+Renato Lui Geh <renatolg@ime.usp.br> <renatogeh@gmail.com>
 Sebastien Binet <binet@cern.ch> <seb.binet@gmail.com>
